updated the config file

--- a/src/main/java/com/crm/qa/config/config.properties
+++ b/src/main/java/com/crm/qa/config/config.properties
@@ -1,6 +1,9 @@
-url = https://www.freecrm.com
+#url = https://www.freecrm.com
+url = https://classic.crmpro.com
 
-username = naveenk
-password = test@123
+#username = naveenk
+#password = test@123
+username: batchautomation
+password: Test@12345
 
 browser = chrome
